add fields to be scrubbed

--- a/mrscrub/configs/SSBC_v1.0.yaml
+++ b/mrscrub/configs/SSBC_v1.0.yaml
@@ -242,10 +242,22 @@ dicom:
     - 0x2203
     action:
         replace-with: ''
+  - name: PatientAge
+    tag:
+    - 0x0010
+    - 0x1010
+    action:
+        replace-with: ''
   - name: PatientSize
     tag:
     - 0x0010
     - 0x1020
+    action:
+        replace-with: ''
+  - name: PatientWeight
+    tag:
+    - 0x0010
+    - 0x1030
     action:
         replace-with: ''
   - name: PatientSizeCodeSequence
