pydicom.read_file is now pydicom.dcmread

--- a/mrscrub/configs/PBN_v1.0.yaml
+++ b/mrscrub/configs/PBN_v1.0.yaml
@@ -523,5 +523,5 @@ dicom:
     - 0x0012
     - 0x0063
     action:
-        replace-with: SSBC_v1.0
+        replace-with: PBN_v1.0
         create: true
